# ICStudio

./: .gitignore  index.html  package-lock.json  package.json
docs/: 2026-05-21-tauri-mvp-design.md  2026-05-21-tauri-mvp-plan.md
icstudio_flutter/: .metadata  README.md  pubspec.yaml
icstudio_flutter/rust/: Cargo.toml
icstudio_flutter/rust/src/: frb_generated.rs  lib.rs
icstudio_flutter/rust/src/api/: backend.rs  connection.rs  device_simulator.rs  mod.rs  profile_import.rs  simulator.rs  snapshot.rs
icstudio_flutter/rust/src/modbus/: protocol.rs
scripts/: run-core-tests.mjs  tauri-before-dev.mjs  tauri-dev-command.mjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  history.rs  lib.rs  main.rs
src-tauri/src/history/: schema.rs  sqlite.rs  types.rs
src-tauri/src/modbus/: backend.rs  host_verification.rs  loopback.rs  mod.rs  protocol.rs
src-tauri/src/modbus/loopback/: dashboard.rs  seed.rs
src-tauri/tests/: history_sqlite.rs  host_verification.rs  loopback_selftest.rs
tests/: alarm-rule-engine-contract.test.mjs  alarm-rule-engine.test.ts  auto-test-orchestrator-pro.test.ts  auto-test-workbench-contract.test.mjs  communication-diagnostics-contract.test.mjs  communication-diagnostics.test.ts  control-safety-center-contract.test.mjs  control-safety-center.test.ts  history-center-workbench-contract.test.mjs  history-data-report-center.test.ts  history-native-storage-contract.test.mjs  performance-animation-contract.test.mjs  point-binding-inspector-contract.test.mjs  point-binding-inspector.test.ts  (+9 more)
(+125 files in other folders)
