[package]
name = "icstudio_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
calamine = "0.35.0"
csv = "1.4.0"
flutter_rust_bridge = "=2.12.0"
serde_json = "1.0.150"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
